Bug 387302 - Missing Unicode support in fit result window
Summary: Missing Unicode support in fit result window
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-25 15:52 UTC by uwestoehr
Modified: 2017-12-13 06:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments
screenshot of fit result window (100.58 KB, image/png)
2017-11-25 15:52 UTC, uwestoehr
Details
patch (24.19 KB, text/plain)
2017-12-13 02:47 UTC, uwestoehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-25 15:52:11 UTC
Created attachment 109059 [details]
screenshot of fit result window

The attached screenshot shows that Unicode characters are not displayed correctly.
Comment 1 uwestoehr 2017-12-13 02:47:09 UTC
Created attachment 109346 [details]
patch

The attached patch fixes the bug for me and also the Unicode warnings I reported in bug 387118 and bug 387196.
Comment 2 Alexander Semke 2017-12-13 06:13:15 UTC
Git commit 574bf9af7177db1ad0ee6e5c7cb3a7d7d6929c8b by Alexander Semke.
Committed on 13/12/2017 at 06:12.
Pushed by asemke into branch 'master'.

Comming Uwe's patch to fix the unicode string in Fit curve dock on Windows.
FIXED-IN: 2.5

M  +66   -60   src/backend/worksheet/plots/cartesian/XYFitCurve.cpp
M  +25   -19   src/kdefrontend/dockwidgets/XYFitCurveDock.cpp

https://commits.kde.org/labplot/574bf9af7177db1ad0ee6e5c7cb3a7d7d6929c8b