Comming Uwe's patch to fix the unicode string in Fit curve dock on Windows.

BUG: 387302
FIXED-IN: 2.5